--- a/blazor-impots/wwwroot/index.html
+++ b/blazor-impots/wwwroot/index.html
@@ -13,5 +13,7 @@
     <app>Loading...</app>
 
     <script src="_framework/blazor.webassembly.js"></script>
+    <script src="css/bootstrap/jquery-3.3.1.min.js"></script>
+    <script src="css/bootstrap/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
