--- a/blazor-impots/wwwroot/index.html
+++ b/blazor-impots/wwwroot/index.html
@@ -15,5 +15,10 @@
     <script src="_framework/blazor.webassembly.js"></script>
     <script src="css/bootstrap/jquery-3.3.1.min.js"></script>
     <script src="css/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script>
+        function openModal() {
+            $('#incomeModal').modal();
+        }
+    </script>
 </body>
 </html>
